# SheFin

./: .gitignore  README.md  ai_fallback.py  ai_realtime.py  ai_services.py  app.py  database_config.py  database_local.py  financial_calculator.py  gemini_ai.py  government_schemes.py  mood_tracker.py  pyproject.toml  shefin_local.db  translations.py  utils.py
shefin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
